- Zone ID can be set for agent in SNMP proxy mode
- Zones has common default proxy node for all protocols
- Zone's proxy node can be placed inside that zone
- Syslog proxy in agent
- Built-in superuser account renamed to "system"
- Default "admin" account now is ordinary member of "Admins" group without built-in privileges
- New method "enableDiscoveryPolling" in NXSL class "Node"
- New NXSL function AgentExecuteAction
- Agent effective user and group can be set in configuration file
- Agent environment variables can be set in configuration file
- Added method "getResourceOwner" and attribute "nodes" to NXSL "Cluster" class
- New object tool type "server script"
- Number of polls can be set for "diff" type thresholds 
- Instance discovery scripts can return instances as map instance/instance name
- CPU usage parameters on Windows moved to winnt.nsm from winperf.nsm and no longer depends on PDH
- New agent metrics for self-monitoring:
	Agent.SyslogProxy.IsEnabled, Agent.SyslogProxy.ReceivedMessages, Agent.SyslogProxy.QueueSize
- Management console
	- New editors for Agent Config Policy and Log Parser Policy. 
	- DCI summary tables with empty menu path not shown in object context menu
- Fixed issues: #69, #80, #92, #397, #521, #568, #723, #795, #906, #909, #942, #949, #959, #992, #999, #1006, #1015, #1044, #1051, #1096, #1100, #1159, #1187, #1191, #1230, #1237, #1245, #1246, #1249, #1254, #1257, #1261, #1263, #1275, #1282, #1284, #1288, #1302


*
* 2.0.6
*

- Fixed incorrect interface network mask reported by agent on Windows XP and Windows Server 2003
- Added option to turn off quotes in AT+CMGS command in generic SMS driver
- Improved compatibility with different GSM modem types in generic SMS driver
- Fixed SQL errors when saving LDAP users to database
- Fixed excessive temporary files creation by web UI
- Fixed build errors on Solaris 11
- Fixed memory leak in Oracle DB driver
- Fixed bug in SNMP transport causing false timeout errors