@@ -20,7 +20,8 @@
 - Built-in superuser account renamed to "system"
 - Default "admin" account now is ordinary member of "Admins" group without built-in privileges
 - New method "enableDiscoveryPolling" in NXSL class "Node"
-- New NXSL function AgentExecuteAction
+- New NXSL functions: AgentExecuteAction, GetAllNodes
+- NXSL functions GetNodeInterfaces, GetNodeTemplates, GetNodeParents, GetObjectChildren returns correct object classes
 - Agent effective user and group can be set in configuration file
 - Agent environment variables can be set in configuration file
 - Added method "getResourceOwner" and attribute "nodes" to NXSL "Cluster" class
